tests/integration/snapshots/integration__conformance__n_object_no-colon.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
{"a"
stderr ---
error: expected colon after key, found no significant characters
 --> stdin:1:4
  |
1 | {"a"
  |  --^
  |  |
  |  expected due to `"a"`
  |
help: insert colon, placeholder value, and closing curly brace
  |
1 | {"a": "garlic bread" }
  |     ++++++++++++++++++
